--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
 #header{
 position: relative;
 background-image: url(img/kontor2.jpg);
+background-color: #flflfl
 }
 h1 {
   text-align: center;
